# Leaf_phenotype

./: README.md  Source.cpp
D435_live_full_sample/: D435.py  Leaf.py  MaskRCNN.py
D435_live_full_sample/pcl_deal/: BeanBox2.cpp
d435_live_full_sample_integrated/: Leaf.py
d435_live_full_sample_integrated/pcl_deal/: BeanBox2.h  CMakeLists.txt  main.cpp
d435_live_full_sample_integrated/pcl_deal_pybind/: BeanBox2.cpp  BeanBox2.h  CMakeLists.txt
scan/: Source.cpp  scan2.h
scanleaf_detached_sample/: scan2.cpp
scanleaf_detached_sample/C++/: CMakeLists.txt  Source.cpp
scanleaf_detached_sample/C++2Python/: CMakeLists.txt  main.py  scan2.cpp  scan2.h
scanleaf_detached_sample/Python/: scan.py  test.py
scanleaf_detached_sampling/: CMakeLists.txt
